kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-service-app-service
spec:
  type: LoadBalancer
  ports:
    - port: 80           
      targetPort: 3000   
  selector:
    app: simple-service-app
