kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-service-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
    - host: simple-service-app.sachinsoni.xyz  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple-service-app-service  
                port:
                  number: 80
